Added infinite scrolling to the carousels as well as an animation and link to the details page

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,20 @@ border: 2px solid #1e1e1e;
 background-color: #2e2e2e;
 border-radius: 4px;
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.snap-x {
+  scroll-snap-type: x mandatory;
+}
+
+.snap-start {
+  scroll-snap-align: start;
+}
